Add CompositionDto endpoint in ACM-r
Issue-ID: POLICY-5629
