# runtime-acm/src/main/resources/openapi/openapi.yaml
@@ -528,6 +528,209 @@ paths:
         last-mod-release: Paris
       x-codegen-request-body-name: body
 
+  /participants/{participantId}/compositions:
+    get:
+      tags:
+        - CompositionDto
+      summary: Query the CompositionDtos
+      description: Query the CompositionDtos, returning the CompositionDto details
+      operationId: queryCompositionDto
+      parameters:
+        - name : participantId
+          in: path
+          description: The UUID of the participant to get
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - name: page
+          in: query
+          required: false
+          description: Zero-based page number, must not be negative.
+          schema:
+            type: integer
+        - name: size
+          in: query
+          required: false
+          description: The size of the page to be returned, must be greater than 0.
+          schema:
+            type: integer
+        - name: X-onap-RequestId
+          in: header
+          description: RequestID for http transaction
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: Serialised instance of
+            [ToscaServiceTemplates](https://github.com/onap/policy-models/blob/master/models-tosca/src/main/java/org/onap/policy/models/tosca/authorative/concepts/ToscaServiceTemplates.java)
+            that contains the automation composition definitions that match the requested filters.
+          headers:
+            X-LatestVersion:
+              $ref: '#/components/headers/X-LatestVersion'
+            X-PatchVersion:
+              $ref: '#/components/headers/X-PatchVersion'
+            X-MinorVersion:
+              $ref: '#/components/headers/X-MinorVersion'
+            X-onap-RequestId:
+              $ref: '#/components/headers/X-onap-RequestId'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CompositionDtos'
+              example:
+                externalValue: 'https://raw.githubusercontent.com/onap/policy-clamp/master/runtime-acm/src/main/resources/openapi/examples/getAllCompositionDtos.json'
+            application/yaml:
+              schema:
+                $ref: '#/components/schemas/CompositionDtos'
+              example:
+                externalValue: 'https://raw.githubusercontent.com/onap/policy-clamp/master/runtime-acm/src/main/resources/openapi/examples/getAllCompositionDtos.yaml'
+        401:
+          description: Authentication Error, returns an instance of
+            [SimpleResponse](https://github.com/onap/policy-clamp/blob/master/models/src/main/java/org/onap/policy/clamp/models/acm/messages/rest/SimpleResponse.java)
+          headers:
+            X-LatestVersion:
+              $ref: '#/components/headers/X-LatestVersion'
+            X-PatchVersion:
+              $ref: '#/components/headers/X-PatchVersion'
+            X-MinorVersion:
+              $ref: '#/components/headers/X-MinorVersion'
+            X-onap-RequestId:
+              $ref: '#/components/headers/X-onap-RequestId'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SimpleResponse'
+        500:
+          description: Internal Server Error, returns an instance of
+            [SimpleResponse](https://github.com/onap/policy-clamp/blob/master/models/src/main/java/org/onap/policy/clamp/models/acm/messages/rest/SimpleResponse.java)
+          headers:
+            X-LatestVersion:
+              $ref: '#/components/headers/X-LatestVersion'
+            X-PatchVersion:
+              $ref: '#/components/headers/X-PatchVersion'
+            X-MinorVersion:
+              $ref: '#/components/headers/X-MinorVersion'
+            X-onap-RequestId:
+              $ref: '#/components/headers/X-onap-RequestId'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SimpleResponse'
+      security:
+        - basicAuth: []
+      x-interface info:
+        api-version: 8.2.1
+        last-mod-release: Paris
+  /participants/{participantId}/compositions/{compositionId}:
+    get:
+      tags:
+        - CompositionDto
+      summary: Get details of the requested CompositionDto
+      description: Get details of the requested CompositionDto, returning all CompositionDto details
+      operationId: getCompositionDto
+      parameters:
+        - name : participantId
+          in: path
+          description: The UUID of the participant to get
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - name : compositionId
+          in: path
+          description: The UUID of the CompositionDto to get
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - name: X-onap-RequestId
+          in: header
+          description: RequestID for http transaction
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description:
+            Serialised instance of
+            [CompositionDto](https://github.com/onap/policy-clamp/blob/master/models/src/main/java/org/onap/policy/clamp/models/acm/dto/CompositionDto.java)
+            containing the requested CompositionDto.
+          headers:
+            X-LatestVersion:
+              $ref: '#/components/headers/X-LatestVersion'
+            X-PatchVersion:
+              $ref: '#/components/headers/X-PatchVersion'
+            X-MinorVersion:
+              $ref: '#/components/headers/X-MinorVersion'
+            X-onap-RequestId:
+              $ref: '#/components/headers/X-onap-RequestId'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CompositionDto'
+              example:
+                externalValue: 'https://raw.githubusercontent.com/onap/policy-clamp/master/runtime-acm/src/main/resources/openapi/examples/getSingleCompositionDto.json'
+            application/yaml:
+              schema:
+                $ref: '#/components/schemas/CompositionDto'
+              example:
+                externalValue: 'https://raw.githubusercontent.com/onap/policy-clamp/master/runtime-acm/src/main/resources/openapi/examples/getSingleCompositionDto.yaml'
+        401:
+          description: Authentication Error, returns an instance of
+            [SimpleResponse](https://github.com/onap/policy-clamp/blob/master/models/src/main/java/org/onap/policy/clamp/models/acm/messages/rest/SimpleResponse.java)
+          headers:
+            X-LatestVersion:
+              $ref: '#/components/headers/X-LatestVersion'
+            X-PatchVersion:
+              $ref: '#/components/headers/X-PatchVersion'
+            X-MinorVersion:
+              $ref: '#/components/headers/X-MinorVersion'
+            X-onap-RequestId:
+              $ref: '#/components/headers/X-onap-RequestId'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SimpleResponse'
+        404:
+          description: Specified automation composition definition not found, returns an instance of
+            [SimpleResponse](https://github.com/onap/policy-clamp/blob/master/models/src/main/java/org/onap/policy/clamp/models/acm/messages/rest/SimpleResponse.java)
+          headers:
+            X-LatestVersion:
+              $ref: '#/components/headers/X-LatestVersion'
+            X-PatchVersion:
+              $ref: '#/components/headers/X-PatchVersion'
+            X-MinorVersion:
+              $ref: '#/components/headers/X-MinorVersion'
+            X-onap-RequestId:
+              $ref: '#/components/headers/X-onap-RequestId'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SimpleResponse'
+        500:
+          description: Internal Server Error, returns an instance of
+            [SimpleResponse](https://github.com/onap/policy-clamp/blob/master/models/src/main/java/org/onap/policy/clamp/models/acm/messages/rest/SimpleResponse.java)
+          headers:
+            X-LatestVersion:
+              $ref: '#/components/headers/X-LatestVersion'
+            X-PatchVersion:
+              $ref: '#/components/headers/X-PatchVersion'
+            X-MinorVersion:
+              $ref: '#/components/headers/X-MinorVersion'
+            X-onap-RequestId:
+              $ref: '#/components/headers/X-onap-RequestId'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SimpleResponse'
+      security:
+        - basicAuth: []
+      x-interface info:
+        api-version: 8.2.1
+        last-mod-release: Paris
+
   /participants/sync/{participantId}:
     put:
       tags:
@@ -2065,6 +2268,12 @@ components:
       type: object
     ToscaServiceTemplate:
       title: ToscaServiceTemplate
+      type: object
+    CompositionDtos:
+      title: CompositionDtos
+      type: object
+    CompositionDto:
+      title: CompositionDto
       type: object
     AutomationCompositionDefinition:
       title: AutomationCompositionDefinition
